--- a/src/pages/HeroScreen/HeroScreen.css
+++ b/src/pages/HeroScreen/HeroScreen.css
@@ -2,7 +2,7 @@
 
 .hero-main{
     width: 100%;
-    height: 645px;
+    height: 675px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -20,6 +20,7 @@
 .info-container > h1{
     color: var(--Very-Dark-Blue);
     font-size: 5.5rem;
+    overflow: hidden;
 }
 
 .info-container > p{
