--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -2,13 +2,27 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    position: relative;
+    
 }
 
 .homepage-container{
     width: 100vw;
-    height: 100vh;
+    height: 120vh;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+}
+
+.urlRes-AdvanceStats{
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(240, 241, 246);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    
 }
